k8s/cluster-apps/code-server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: code-server
  labels:
    app: code-server
spec:
  selector:
    matchLabels:
      app: code-server
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: code-server
    spec:
      securityContext:
        runAsUser: 0
        runAsGroup: 0
      containers:
        - name: code-server
          image: ghcr.io/coder/code-server:latest@sha256:3623e6362abdec6258472882b06fdeec9d6ce2ad3fda316b3c5d7ed092b89add
          imagePullPolicy: IfNotPresent
          args:
            - "--auth"
            - "$(AUTH)"
            - "--user-data-dir"
            - "$(USER_DATA_DIR)"
            - "--extensions-dir"
            - "$(EXTENSIONS_DIR)"
            - "--port"
            - "$(PORT)"
            - "$(CODE_PATH)"
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          volumeMounts:
            - name: config
              mountPath: /code
            - name: conffiles
              mountPath: /code/config
            - name: homelab
              mountPath: /code/homelab
      volumes:
        - name: config
          hostPath:
            path: /config/code-server
            type: DirectoryOrCreate
        - name: conffiles
          hostPath:
            path: /config
            type: DirectoryOrCreate
        - name: homelab
          hostPath:
            path: /root/homelab
            type: DirectoryOrCreate
      restartPolicy: Always
