k8s/cluster-apps/code-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: code-server
  name: code-server
spec:
  internalTrafficPolicy: Cluster
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
  selector:
    app: code-server
  type: ClusterIP
