k8s/cluster-apps/code-server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: code-server
  name: code-server
spec:
  ingressClassName: nginx
  rules:
    - host: code-server.k8s.javydekoning.com
      http:
        paths:
          - backend:
              service:
                name: code-server
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - code-server.k8s.javydekoning.com
      secretName: javydekoning-com-tls
